Get URL and not String anymore Method to send HTTP response through socket